--- a/Duck Duck Go/Base.lproj/Main.storyboard
+++ b/Duck Duck Go/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="708" y="128.18590704647679"/>
+            <point key="canvasLocation" x="1681" y="133"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
@@ -123,7 +123,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="769" y="-1160"/>
+            <point key="canvasLocation" x="1681" y="-630"/>
         </scene>
         <!--Master View Controller-->
         <scene sceneID="BzV-iI-4Lw">
@@ -133,6 +133,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6PC-Xc-fJH">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kpu-cO-6Bo">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCellIdentifier" id="KEg-pn-w0f" customClass="CollectionViewCell" customModule="Duck_Duck_Go" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YMo-pE-oKO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="YMo-pE-oKO" firstAttribute="leading" secondItem="KEg-pn-w0f" secondAttribute="leading" id="DCA-k9-dMt"/>
+                                            <constraint firstAttribute="trailing" secondItem="YMo-pE-oKO" secondAttribute="trailing" id="FR9-t3-iXe"/>
+                                            <constraint firstItem="YMo-pE-oKO" firstAttribute="top" secondItem="KEg-pn-w0f" secondAttribute="top" id="OfV-jp-zz4"/>
+                                            <constraint firstAttribute="bottom" secondItem="YMo-pE-oKO" secondAttribute="bottom" id="UsQ-Ha-xWi"/>
+                                        </constraints>
+                                        <size key="customSize" width="150" height="150"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="YMo-pE-oKO" id="o2f-ZH-em7"/>
+                                            <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetailFromCollection" id="hOP-Ym-Blf"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Yx0-wc-EKa" id="OLz-oa-gyS"/>
+                                    <outlet property="delegate" destination="Yx0-wc-EKa" id="wrc-mV-Iyl"/>
+                                </connections>
+                            </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="93E-0a-jfg">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -168,19 +208,24 @@
                         <constraints>
                             <constraint firstItem="93E-0a-jfg" firstAttribute="trailing" secondItem="vS6-44-iTf" secondAttribute="trailing" id="21F-SA-Lhw"/>
                             <constraint firstItem="93E-0a-jfg" firstAttribute="bottom" secondItem="vS6-44-iTf" secondAttribute="bottom" id="F46-4L-NnG"/>
+                            <constraint firstItem="6PC-Xc-fJH" firstAttribute="bottom" secondItem="vS6-44-iTf" secondAttribute="bottom" id="NA9-ui-aMR"/>
+                            <constraint firstItem="6PC-Xc-fJH" firstAttribute="leading" secondItem="vS6-44-iTf" secondAttribute="leading" id="RLn-PN-oSk"/>
+                            <constraint firstItem="6PC-Xc-fJH" firstAttribute="top" secondItem="vS6-44-iTf" secondAttribute="top" id="aVX-gy-5CI"/>
                             <constraint firstItem="93E-0a-jfg" firstAttribute="top" secondItem="vS6-44-iTf" secondAttribute="top" id="lon-To-QB8"/>
+                            <constraint firstItem="6PC-Xc-fJH" firstAttribute="trailing" secondItem="vS6-44-iTf" secondAttribute="trailing" id="tE4-aa-8sa"/>
                             <constraint firstItem="93E-0a-jfg" firstAttribute="leading" secondItem="vS6-44-iTf" secondAttribute="leading" id="vsQ-N2-s4M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vS6-44-iTf"/>
                     </view>
                     <navigationItem key="navigationItem" id="qjW-T4-MLc"/>
                     <connections>
+                        <outlet property="masterCollectionView" destination="6PC-Xc-fJH" id="Jab-jV-Bcy"/>
                         <outlet property="masterTableView" destination="93E-0a-jfg" id="Zom-n1-naO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kCY-mK-wTL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1532" y="-593.25337331334333"/>
+            <point key="canvasLocation" x="799" y="-630"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r7l-gg-dq7">
@@ -196,10 +241,10 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SLD-UC-DBI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-45" y="129"/>
+            <point key="canvasLocation" x="798" y="133"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UQi-x3-GI5"/>
+        <segue reference="hOP-Ym-Blf"/>
     </inferredMetricsTieBreakers>
 </document>
