--- a/Duck Duck Go/Base.lproj/Main.storyboard
+++ b/Duck Duck Go/Base.lproj/Main.storyboard
@@ -137,21 +137,21 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kpu-cO-6Bo">
-                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="itemSize" width="250" height="250"/>
                                     <size key="headerReferenceSize" width="150" height="30"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCellIdentifier" id="KEg-pn-w0f" customClass="CollectionViewCell" customModule="Duck_Duck_Go" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="30" width="150" height="150"/>
+                                        <rect key="frame" x="62.5" y="30" width="250" height="250"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YMo-pE-oKO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YMo-pE-oKO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
@@ -161,7 +161,7 @@
                                             <constraint firstItem="YMo-pE-oKO" firstAttribute="top" secondItem="KEg-pn-w0f" secondAttribute="top" id="OfV-jp-zz4"/>
                                             <constraint firstAttribute="bottom" secondItem="YMo-pE-oKO" secondAttribute="bottom" id="UsQ-Ha-xWi"/>
                                         </constraints>
-                                        <size key="customSize" width="150" height="150"/>
+                                        <size key="customSize" width="250" height="250"/>
                                         <connections>
                                             <outlet property="imageView" destination="YMo-pE-oKO" id="o2f-ZH-em7"/>
                                             <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetailFromCollection" id="hOP-Ym-Blf"/>
